# bangla-keyboard-mac

./: .gitattributes  .gitignore  DISCLAIMER.md  README.md  SECURITY.md  SPEC.md
docs/: MAC-PARITY-TODO.md
engine/: Engine.swift  README.md
linux/: README.md  build-deb.sh  build.sh  ibus-bangla.cpp  ibus-selftest.cpp  install.sh  test.sh  uninstall.sh
macos/: README.md
macos/fonts-licenses/: FONTS.md
macos/src/keylayouts/: Bangla Classic.keylayout  Bangla Unicode.keylayout
src/keylayouts/: Bangla Classic.keylayout  Bangla Unicode.keylayout
windows/: README.md  RELEASING.md  build-all.bat  build-all.sh
windows/engine/: CMakeLists.txt  README.md  build-and-test.bat  classic.cpp  classic.h  classic_table.h  classic_test.cpp  demo.cpp  engine.cpp  engine.h  gen_classic.py  gen_classic_test.py  gen_klengine_test.py  gen_tables.py  keylayout_interp.py  klengine.cpp  klengine.h  klengine_test.cpp  test.cpp  unicode_table.h  verify.py
windows/installer/: README.md  USAGE.txt  banglakeyboard.iss
windows/tray/: README.md  tray.cpp  tray.rc
windows/tsf/: BanglaKeyboard.def  CMakeLists.txt  Dll.cpp  Globals.cpp  Globals.h  README.md  TextService.cpp  TextService.h
